syntax = "proto3";

package merkledb;

option java_package = "com.swirlds.merkledb.files";
option java_multiple_files = true;

message HashRecord {

    // Virtual node path
    optional fixed64 path = 1;

    // Hash. Always DigestType.SHA_384 for now
    bytes hash = 2;
}
